--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -1,12 +1,67 @@
+/* EmailHeader.css */
+.email-header{
+  display: flex;
+  flex-direction: column;
+}
+
+.header-top {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: left;
+}
+.header-top >div{
+display: flex;
+justify-content: space-between;
+}
+
+.header-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-bottom input {
+  padding: 5px 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: #333;
+  color: white;
+}
+
+.sort-options {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.sort-options button {
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+
+
+
 /* EmailList.css */
+
+.list{
+  border-right: 1px solid #343a40;
+  padding: 10px 15px ;
+  box-sizing: border-box;
+  overflow: scroll;
+
+}
 .email-list {
   background-color: #000000;
   overflow-y: hidden;
 }
 
 .email-item {
-  padding: 15px;
-  border-bottom: 1px solid #333;
+  padding: 15px 5px;
+  border-top: 1px solid #333;
   cursor: pointer;
   color: #fff;
   display: flex;
@@ -14,7 +69,7 @@
 }
 
 .email-item:hover {
-  background-color: #333;
+  background-color: #1d1c1c;
 }
 
 .email-head {
@@ -26,13 +81,14 @@
 .email-indicator {
   width: 8px;
   height: 8px;
+  margin-right: 8px;
   background-color: #3b82f6; /* Blue dot */
   border-radius: 50%;
-  margin-right: 10px;
 }
 
 .email-sender {
-  font-weight: bold;
+  font-weight: 500;
+  font-size: 18px;
 }
 
 .email-date {
@@ -40,7 +96,9 @@
 }
 
 .email-subject {
-  margin: 5px 0;
+  margin: 5px 0 5px 15px;
+  font-weight: 300;
+  font-size: 14px;
 }
 
 .email-tags {
@@ -74,49 +132,11 @@
   padding: 2px 8px;
   background-color: #444;
   border-radius: 12px;
-  font-size: 12px;
+  font-size: 14px;
+  font-weight: 400;
   display: inline-block;
 }
-
-
-
-
-
-/* EmailHeader.css */
-.email-header{
-  display: flex;
-  flex-direction: column;
-}
-
-.header-top {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.header-bottom {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.header-bottom input {
-  padding: 5px 10px;
-  border-radius: 5px;
-  border: none;
-  background-color: #333;
-  color: white;
-}
-
-.sort-options {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.sort-options button {
-  background: none;
-  border: none;
-  color: white;
-  cursor: pointer;
+.email-campaign >img{
+  height: 12px;
+  margin-right: 5px;
 }
